# cacheWorkloadAnalysisOSDI20

./: README.md
JPlot/: LICENSE.txt  MANIFEST.in  README.md  __init__.py  requirements.txt  setup.py
JPlot/examples/: plotTest.py
JPlot/src/: __init__.py  ax.py  plotTools.py  pyplot.py  pyplotAux.py  topUtils.py
JPlot/src/const/: color.py  const.py  globalSettings.py
JPlot/src/styles/: JStyle  fourcol  onecolLargeFont  presentation  publication  twocol
cacheTraceAnalysis/core/: req.py  traceReader.py  traceStat.py
cacheTraceAnalysis/metadata/: sizeCntOverTime_w300_ibis_api_cache.0.sbin.pickle  sizeCntOverTime_w300_onboarding_task_service_cache.0.sbin.pickle
cacheTraceAnalysis/plot/: dist.py  evalTrace.py  popularity.py  reqRate.py  simCompare.py  simulator.py  sizeDistHeatmap.py  traceStat.py  workingset.py
cacheTraceAnalysis/simulator/: setup.py  test.py
cacheTraceAnalysis/traceReader/: twrBinTraceReader.py
cacheTraceAnalysis/utils/: common.py
cacheTraceAnalysis/utils/convertCPP/: CMakeLists.txt  prepare.py  traceProcessing.cpp  traceProcessing.hpp
cacheViz/: setup.py
cacheViz/libMimircache/pyBindings/: pyInit.h  pySim.h
cacheViz/src/plotsLibMC/: evictionAlgo.py  heatmap.py  libMCUtils.py
cacheViz/src/utilsTwr/: common.py
data/: alpha  trace_stat.core.twoday
data/metadata/eviction/: eviction_ads_merged_counting_features_cache.0.eval.sbin_slabLRU_ttl240.pickle  eviction_ads_ranking_feature_store_cache.0.eval.sbin_FIFO_ttl274752.pickle  eviction_ads_ranking_feature_store_cache.0.eval.sbin_LRU_ttl274752.pickle  (+234 more)
(+247 files in other folders)
